k8s/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contacts-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths: 
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service: 
                name: auth-api
                port: 
                  number: 8080
          - path: /update(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service: 
                name: contact-api
                port: 
                  number: 8082
          - path: /read(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service: 
                name: read-api
                port: 
                  number: 8084
